ubuntu/22.04/p/py/python3.10-dbg/3.10.4-3ubuntu0.1/92a8204a-23af-4a56-9337-c3954d490dda/_usr_bin_python3.10-dbg.strace.stderr
  File "<stdin>", line 1
    /usr/lib/debug/.build-id/08/56a8fd428aad725d99d4eeca0c90e1bd72a299.debug
                             ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
